# AstraQuant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  UPDATE.md  VERSION  main.py  pyproject.toml  requirements.txt  run_monitor.bat  test_notification.py  test_notification1.py
astraquant/: __init__.py  application.py  config.py  constants.py  registry.py  services.py  startup.py  version.py
astraquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: config.yaml
docs/: ROADMAP.md
reports/: performance.csv  trades.csv
sample_data/: nifty_option_5m.csv  nifty_spot_5m.csv  option.csv  spot.csv
scripts/: demo_discount_scanner.py  demo_historical.py  demo_history.py  demo_instrument_service.py  demo_test_sensex_intraday.py  download_instruments.py  live_monitor.py  run_scanner.py  scan_discount.py
tests/: test_application.py  test_backtest_dynamic_strike.py  test_backtest_engine.py  test_backtest_integration.py  test_broker_models.py  test_broker_order.py  test_candle.py  test_candle_aggregator.py  test_candle_matcher.py  test_candle_synchronizer.py  test_config_loader.py  test_csv_data_provider.py  test_csv_loader.py  test_csv_reader.py  test_csv_validator.py  test_didrs_engine.py  test_didrs_strategy.py  test_discount_tracker.py  test_equity_curve.py  test_expiry_calendar.py  test_expiry_cycle.py  test_history_filter.py  test_instrument.py  test_logger.py  test_market_hours.py  test_market_session.py  test_opportunity_lifecycle.py  test_option_pricing.py  test_order_risk.py  test_order_service.py  test_order_validation.py  (+22 more)
(+112 files in other folders)
