[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astraquant"
version = "1.0.0-alpha"
description = "Production-grade quantitative trading engine"
authors = [
    { name = "Vikas Kumar" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "PyYAML",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astraquant*"]

[tool.pytest.ini_options]
pythonpath = ["."]